# MultiAgent-kubecon2025

./: .env.example  .env.template  .gitignore  CLEANUP_IMPLEMENTATION_SUMMARY.md  CODESPACES_CHECKLIST.md  CODESPACES_QUICKREF.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.activity  Dockerfile.coordinator  Dockerfile.currency  KUBECON_PRESENTATION_GUIDE.md  MONITORING_GUIDE.md  NEXT_STEPS_AZD.md  PHASE2_STATUS.md  PROJECT_STRUCTURE.md  PROTOCOL_FLOWS.md  README.md  azure.microservices.yaml  azure.yaml  cleanup_sensitive_data.py  main.py  pyproject.toml  requirements-minimal.txt  requirements.txt  setup_project.py  test_a2a_complete.py  test_mcp_local.py  test_mcp_simple.py
.devcontainer/: README.md  devcontainer.json  post-create.sh
.github/: copilot-instructions.md
docs/: A2A_AND_MCP_EXPLAINED.md  AZD_DEPLOYMENT_GUIDE.md  LOGGING_GUIDE.md  LOG_EXAMPLES.md  MCP_INTEGRATION.md  NEW_ENVIRONMENT_SETUP.md  PHASE1_TEST_RESULTS.md  PHASE2_ARCHITECTURE.md  PHASE2_CHECKLIST.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_NEW_RESOURCE_GROUP.md  QUICK_REFERENCE_DUAL_ENV.md  README_AZD_MICROSERVICES.md
infra/: main.bicep  main.microservices.bicep  main.microservices.json
infra/modules/: acr-role.bicep  core-resources.bicep  microservices-aks.bicep  openai-role.bicep
manifests/: configmap.yaml  deployment.yaml
src/: __init__.py
src/agent/: __init__.py  a2a_server.py  agent_executor.py  mcp_activity_server.py  mcp_coordinator.py  mcp_currency_server.py  travel_agent.py
src/api/: __init__.py  chat.py
src/storage/: __init__.py  (+1 more)
templates/: index.html
(+7 files in other folders)
