[project]
name = "semantic-kernel-travel-agent"
version = "0.1.0"
description = "Standalone Semantic Kernel A2A Travel Agent with Web UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.10.6",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "semantic-kernel>=1.30.0",
    "a2a-sdk>=0.2.9",
    "jwcrypto>=1.5.6",
    "pyjwt>=2.10.1",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "typing-extensions>=4.12.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.5", 
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.14.0", 
    "ruff>=0.11.2"
]

[tool.ruff]
line-length = 120
ignore = [
    "E501",  # Line too long
]

[tool.ruff.format]
line-ending = "auto"
